--- a/scart/package.json
+++ b/scart/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -37,6 +38,7 @@
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
     "reactstrap": "^6.1.0",
     "redux": "^4.0.0",
