--- a/scart/package.json
+++ b/scart/package.json
@@ -13,6 +13,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "crypto-js": "^3.1.9-1",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
@@ -30,6 +31,8 @@
     "jest": "20.0.4",
     "node-sass": "^4.9.0",
     "npm": "^6.1.0",
+    "oauth-1.0a": "^2.2.4",
+    "oauth-signature": "^1.5.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
