--- a/scart/package.json
+++ b/scart/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^5.0.7",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
+    "reactjs-localstorage": "0.0.6",
     "reactstrap": "^6.1.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
